--- a/style.css
+++ b/style.css
@@ -17,7 +17,6 @@ body {
 }
 
 input {
-	width: 300px;
 	height: 50px;
 	padding: 10px;
 	outline: none;
@@ -41,6 +40,31 @@ input {
 	flex-flow: column nowrap;
 	justify-content: flex-end;
 	background-color: #252526;
+	width: 350px;
+}
+
+.history {
+	overflow-y: scroll;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	flex-flow: row wrap;
+	align-content: flex-start;
+}
+
+.history::-webkit-scrollbar {
+	width: 0;
+	display: none;
+}
+
+p {
+	padding: 10px;
+	font-family: 'Roboto';
+	font-size: 14px;
+	font-weight: 500;
+	color: #ccc;
+	width: 40%;
+	height: 10px;
 }
 
 input::placeholder {
@@ -56,6 +80,8 @@ canvas {
 }
 
 button {
+	font-family: 'Roboto';
+	font-weight: 400;
 	height: 50px;
 	background-color: #191919; /* Button background color */
 	color: #fff; /* Button text color */
