--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ h1 {
 .history {
 	overflow-y: scroll;
 	width: 100%;
-	height: 100%;
+	height: 350px;
 	display: flex;
 	flex-flow: row wrap;
 	align-content: flex-start;
