--- a/openings/style.css
+++ b/openings/style.css
@@ -13,6 +13,23 @@ body {
 	height: 100vh;
 }
 
+select {
+	width: 60%;
+	margin-left: auto;
+	margin-right: auto;
+
+	padding: 10px;
+	font-size: 1em;
+	border: none;
+	background-color: #333;
+	color: #ccc;
+	appearance: none;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	cursor: pointer;
+	outline: none;
+}
+
 nav {
 	display: flex;
 	flex-flow: row nowrap;
